# lazyclash

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  rust-toolchain.toml  rustfmt.toml
.config/: config.json5
.github/workflows/: cd.yml
examples/: action_run.rs  block.rs  docs.rs  input.rs  scrollbar.rs  statefull_widget.rs
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  db.rs  details.rs  functions.rs  main.rs  menu.rs  menus.rs  mode.rs  prfitem.rs  utils.rs  view.rs
src/components/: home.rs  input.rs  subscribe_input.rs
src/details/: net_state_detail.rs  subscribe_detail.rs  version_detail.rs
src/menu/: subscription.rs  version.rs
src/menus/: mod.rs  net_state.rs  subscribe.rs  version_menu.rs  versions.rs
src/utils/: help.rs
src/view/: fps.rs
