[package]
authors = ["liuhuo <liuhuo2370@gmail.com>"]
build = "build.rs"
description = "clash tui 界面"
edition = "2021"
name = "lazyclash"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
better-panic = "0.3.0"
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.30"
human-panic = "2.0.1"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.158"
pretty_assertions = "1.4.0"
ratatui = { version = "0.28.1", features = ["serde", "macros"] }
ratatui_input = { git = "https://github.com/liuhuo23/ratatui_input.git", branch = "master" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = "0.7.11"
tracing = { version = "0.1.40", features = [] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
clipboard = "0.5.0"
[build-dependencies]
anyhow = "1.0.86"
vergen-gix = { version = "1.0.0", features = ["build", "cargo"] }

[[example]]
name = "scrollbar"
path = "./examples/scrollbar.rs"

[[example]]
name = "block"
path = "./examples/block.rs"

[[example]]
name = "mywidget"
path = "./examples/statefull_widget.rs"

[[example]]
name = "input"
path = "./examples/input.rs"


[[example]]
name = "action"
path = "./examples/action_run.rs"

[[example]]
name = "docs"
path = "./examples/docs.rs"